completed main structure, need to fix certain details. like spacing

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ body {
   font-family: 'Courier New', Courier, monospace;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
@@ -19,6 +22,8 @@ body {
 .sidebar {
   width: 300px;
   background: whitesmoke;
+  
+
 
 }
 
@@ -26,4 +31,28 @@ body {
   border: 1px solid wheat;
   box-shadow: 2px 4px 16px rgba(0,0,0,.6);
   border-radius: 4px;
+  width: 200px;
+  
+  
+}
+
+.main-content {
+  display: flex;
+  flex-wrap: wrap;
+  
+
+}
+
+.main-body {
+  display: flex;
+  flex: 1;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
